--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Home</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (tap)="optionsPopover($event)" >
+          <ion-icon name="more"></ion-icon>
+      </button>
+     
+  </ion-buttons>
+
   </ion-navbar>
 </ion-header>
 
