--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
       <button ion-button icon-only (tap)="optionsPopover($event)" >
           <ion-icon name="more"></ion-icon>
       </button>
-     
+
   </ion-buttons>
 
   </ion-navbar>
@@ -18,6 +18,10 @@
 
   <button ion-item (click)="openAR()">
     Ar
+  </button>
+
+  <button ion-item (click)="nuevoPosit()">
+    Add posit
   </button>
 
 </ion-content>
