Agregadas coordenadas al posit

--- a/src/assets/architectWorld.html
+++ b/src/assets/architectWorld.html
@@ -67,7 +67,7 @@
 
     </div>
 
-    <a  href="javascript: World.nuevoPosit()" class="fab"> D </a>
+    <a  href="javascript: World.nuevoPosit()" class="fab"> + </a>
 
 
   </div>
