--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Amelie</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (tap)="optionsPopover($event)" >
           <ion-icon name="more"></ion-icon>
@@ -26,8 +26,8 @@
               <ion-icon name="globe"></ion-icon>
             </button>         
       </ion-row>  
-     <!-- <button ion-item (click)="nuevoPosit()">
+      <!--<button ion-item (click)="nuevoPosit()">
         Add posit
-      </button>-->    
+      </button>  -->
   </div>
 </ion-content>
