--- a/src/pages/mapa/mapa.html
+++ b/src/pages/mapa/mapa.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>mapa</ion-title>
+    <ion-title>Mapa</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,7 +17,7 @@
 
   </div>
   <ion-fab bottom right>
-    <button (click)="gotoAR()" ion-fab>
+    <button (click)="gotoAR()" ion-fab color=default>
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
