--- a/src/pages/posit/posit.html
+++ b/src/pages/posit/posit.html
@@ -4,37 +4,19 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>posit</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-
 <ion-content padding>
   <ion-card>
-    <ion-card-header>
-
-
-    </ion-card-header>
     <ion-card-content>
-
       <ion-list>
-
         <ion-item>
           <ion-label floating>Mensaje </ion-label>
           <ion-textarea autosize rows="1" [(ngModel)]="posit.text"></ion-textarea>
         </ion-item>
       </ion-list>
-
     </ion-card-content>
   </ion-card>
-
   <ion-fab bottom right>
-    <button (click)="guardar()" ion-fab class="button-grad-light">
+    <button (click)="guardar()" ion-fab color="default">
       <ion-icon name="checkmark"></ion-icon>
     </button>
   </ion-fab>
