css de float ar

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,8 @@
 </ion-header>
 
 <ion-content>
+        <a  href="javascript: World.nuevoPosit()" class="fab"> + </a>
+
   <div padding text-center class="first-middle">
     <img src="assets/imgs/mini_logo.png">
   </div>
