--- a/src/assets/architectWorld.html
+++ b/src/assets/architectWorld.html
@@ -2,117 +2,123 @@
 
 <html>
 
-    <head>
+<head>
 
-    <!--  basic meta information -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Type" content="application/json; charset=utf-8">
-    <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
+  <!--  basic meta information -->
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="application/json; charset=utf-8">
+  <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
 
-    <title>My ARchitect World</title>
+  <title>My ARchitect World</title>
 
-    <script src="https://www.wikitude.com/libs/architect.js"></script>
-    <script src="../ade.js"></script>
+  <script src="https://www.wikitude.com/libs/architect.js"></script>
+  <script src="../ade.js"></script>
 
-    <!-- positioning of poi-radar -->
-    <link rel="stylesheet" href="css/poi-radar.css" />
+  <!-- positioning of poi-radar -->
+  <link rel="stylesheet" href="css/poi-radar.css" />
 
-    <!-- jquery mobile CSS -->
-    <link rel="stylesheet" href="jquery/jquery.mobile-1.3.2.min.css" />
-    <!-- required to set background transparent & enable "click through" -->
-    <link rel="stylesheet" href="jquery/jquery-mobile-transparent-ui-overlay.css" />
+  <!-- jquery mobile CSS -->
+  <link rel="stylesheet" href="jquery/jquery.mobile-1.3.2.min.css" />
+  <!-- required to set background transparent & enable "click through" -->
+  <link rel="stylesheet" href="jquery/jquery-mobile-transparent-ui-overlay.css" />
 
-    <!-- jquery JS files -->
-    <script type="text/javascript" src="jquery/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="jquery/jquery.mobile-1.3.2.min.js"></script>
+  <!-- jquery JS files -->
+  <script type="text/javascript" src="jquery/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="jquery/jquery.mobile-1.3.2.min.js"></script>
 
-    <!-- marker representation-->
-    <script src="js/marker.js"></script>
+  <!-- marker representation-->
+  <script src="js/marker.js"></script>
 
-    <!-- World logic-->
-    <script type="text/javascript" src="js/reloadingcontent.js"></script>
+  <!-- World logic-->
+  <script type="text/javascript" src="js/reloadingcontent.js"></script>
 
-    <!-- radar component -->
-    <script type="text/javascript" src="js/radar.js"></script>
+  <!-- radar component -->
+  <script type="text/javascript" src="js/radar.js"></script>
 </head>
 
-    <body >
-     <div data-role="page" id="page1" style="background: none;" >
+<body>
+  <div data-role="page" id="page1" style="background: none;">
 
-        <a  href="javascript: World.nuevoPosit()" class="fab"> + </a>
-
-
-            <!-- MAIN PAGE CONTENT -->
-
-            <!-- header of UI holding feature buttons -->
-            <!-- <div style="display: none;" id ="header-status" data-role="header" data-position="fixed" data-theme="c">
-                <a href="javascript: World.showRange();" data-icon="gear" data-inline="true" data-mini="true">Range</a>
-                <a href="javascript: World.reloadPlaces()" data-icon="refresh" >Reload</a>
-                <h1></h1>
-            </div> -->
-
-            <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
-            <div style="display: none;" class="radarContainer_left" id="radarContainer"></div>
+    <a href="javascript: World.nuevoPosit()" class="fab"> + </a>
 
 
+    <!-- MAIN PAGE CONTENT -->
+
+    <!-- header of UI holding feature buttons -->
+    <!-- <div id="header-status" data-role="header" data-position="fixed" data-theme="c"> -->
+      <!-- <a href="javascript: World.showRange();" data-icon="gear" data-inline="true" data-mini="true">Range</a>
+                <a href="javascript: World.reloadPlaces()" data-icon="refresh" >Reload</a> -->
+    <!-- </div> -->
+    <p id="coords" style="width: 100%;"></p>
+
+    <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
+    <div style="display: none;" class="radarContainer_left" id="radarContainer"></div>
 
 
 
-            <!-- PANELS, ONLY VISIBLE ON DEMAND -->
-
-            <!-- panel containing POI detail information -->
-            <div data-role="panel" id="panel-poidetail" data-position="right" data-display="overlay" style="background-color:#F0F0F0;" data-theme="c">
-
-                <!-- header with "close" button -->
-                <div data-role="header" data-theme="c">
-                    <h1>Details</h1>
-                    <a href="#header" data-rel="close">Close</a>
-                </div>
-
-                <!-- content of POI detail page, you may also add thumbnails etc. here if you like -->
-                 <div data-role="content">
-
-                    <!-- title -->
-                    <h3 id="poi-detail-title"></h3>
-
-                    <!-- description -->
-                    <h4 id="poi-detail-description"></h4>
-
-                    <!-- distance -->
-                    <h4>Distance: <a id="poi-detail-distance"></a></h4>
-                </div>
-            </div>
 
 
+    <!-- PANELS, ONLY VISIBLE ON DEMAND -->
 
-            <!-- range panel -->
-            <div data-role="panel" id="panel-distance" data-position="left" data-display="overlay" style="background-color:#F0F0F0;" data-theme="c">
+    <!-- panel containing POI detail information -->
+    <div data-role="panel" id="panel-poidetail" data-position="right" data-display="overlay" style="background-color:#F0F0F0;"
+      data-theme="c">
 
-                    <!-- header with close button -->
-                    <div data-role="header" data-theme="c">
-                        <h1>Range</h1>
-                        <a href="#header" data-rel="close">Close</a>
-                    </div>
+      <!-- header with "close" button -->
+      <div data-role="header" data-theme="c">
+        <h1>Details</h1>
+        <a href="#header" data-rel="close">Close</a>
+      </div>
 
-                    <!-- distance information, calculated/updated in code  -->
-                    <div data-role="content">
+      <!-- content of POI detail page, you may also add thumbnails etc. here if you like -->
+      <div data-role="content">
 
-                        <!-- Range in m/km-->
-                        <h4> Range: <a id="panel-distance-value"></a></h4>
+        <!-- title -->
+        <h3 id="poi-detail-title"></h3>
 
-                        <!-- Amount of visible places -->
-                        <h4> Visible: <a id="panel-distance-places"></a></h4>
+        <!-- description -->
+        <h4 id="poi-detail-description"></h4>
 
-                        <!-- default slider -->
-                        <input id="panel-distance-range" type="range" data-highlight="true" name="rangeSlider" min="0" max="100" value="100" data-show-value="false" step="5" data-popup-enabled="false">
-                    </div>
-            </div>
+        <!-- distance -->
+        <h4>Distance:
+          <a id="poi-detail-distance"></a>
+        </h4>
+      </div>
+    </div>
 
-        </div>
 
-    </body>
+
+    <!-- range panel -->
+    <div data-role="panel" id="panel-distance" data-position="left" data-display="overlay" style="background-color:#F0F0F0;"
+      data-theme="c">
+
+      <!-- header with close button -->
+      <div data-role="header" data-theme="c">
+        <h1>Range</h1>
+        <a href="#header" data-rel="close">Close</a>
+      </div>
+
+      <!-- distance information, calculated/updated in code  -->
+      <div data-role="content">
+
+        <!-- Range in m/km-->
+        <h4> Range:
+          <a id="panel-distance-value"></a>
+        </h4>
+
+        <!-- Amount of visible places -->
+        <h4> Visible:
+          <a id="panel-distance-places"></a>
+        </h4>
+
+        <!-- default slider -->
+        <input id="panel-distance-range" type="range" data-highlight="true" name="rangeSlider" min="0" max="100" value="100" data-show-value="false"
+          step="5" data-popup-enabled="false">
+      </div>
+    </div>
+
+  </div>
+
+</body>
 
 </html>
-
-
-
